@@ -21,7 +21,7 @@ import net.minecraft.world.World;
  * Minecraft 1.8.8 bytecode is (c) 2015 Mojang AB. "Do not distribute!"
  * Mod Coder Pack v9.18 deobfuscation configs are (c) Copyright by the MCP Team
  * 
- * EaglercraftX 1.8 patch files are (c) 2022 LAX1DUDE. All Rights Reserved.
+ * EaglercraftX 1.8 patch files are (c) 2022-2023 LAX1DUDE. All Rights Reserved.
  * 
  * WITH THE EXCEPTION OF PATCH FILES, MINIFIED JAVASCRIPT, AND ALL FILES
  * NORMALLY FOUND IN AN UNMODIFIED MINECRAFT RESOURCE PACK, YOU ARE NOT ALLOWED
@@ -44,12 +44,12 @@ public class EntitySpider extends EntityMob {
 	 * entity riding this one.
 	 */
 	public double getMountedYOffset() {
-		return this.height * 0.5F;
+		return (double) (this.height * 0.5F);
 	}
 
 	protected void entityInit() {
-        super.entityInit();
-        this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
+		super.entityInit();
+		this.dataWatcher.addObject(16, new Byte((byte) 0));
 	}
 
 	protected void applyEntityAttributes() {
@@ -119,7 +119,7 @@ public class EntitySpider extends EntityMob {
 	}
 
 	public boolean isPotionApplicable(PotionEffect potioneffect) {
-        return potioneffect.getPotionID() != Potion.poison.id && super.isPotionApplicable(potioneffect);
+		return potioneffect.getPotionID() == Potion.poison.id ? false : super.isPotionApplicable(potioneffect);
 	}
 
 	/**+
@@ -157,9 +157,9 @@ public class EntitySpider extends EntityMob {
 		ientitylivingdata = super.onInitialSpawn(difficultyinstance, ientitylivingdata);
 		if (this.worldObj.rand.nextInt(100) == 0) {
 			EntitySkeleton entityskeleton = new EntitySkeleton(this.worldObj);
-            entityskeleton.setLocationAndAngles(this.posX, this.posY, this.posZ, this.rotationYaw, 0.0F);
-            entityskeleton.onInitialSpawn(difficultyinstance, null);
-            this.worldObj.spawnEntityInWorld(entityskeleton);
+			entityskeleton.setLocationAndAngles(this.posX, this.posY, this.posZ, this.rotationYaw, 0.0F);
+			entityskeleton.onInitialSpawn(difficultyinstance, (IEntityLivingData) null);
+			this.worldObj.spawnEntityInWorld(entityskeleton);
 			entityskeleton.mountEntity(this);
 		}
 
